Print out trying to initialize each filter